# lipread-ai

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/lipread/: __init__.py  cli.py  models.py  report.py  simulator.py
src/lipread/detector/: __init__.py  face.py  features.py  lip.py
src/lipread/recognizer/: __init__.py  decoder.py  model.py  vocabulary.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_lipread.py
